// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redirect correctly 1`] = `
<div
  noThrow={true}
  to="/"
>
  Redirect - 
</div>
`;

exports[`renders correctly 1`] = `
<div
  render={[Function]}
  renderCreated={[Function]}
>
  New - 
  <div>
    render - 
    <div
      className="Component-root-81"
    >
      <div
        className="Component-header-79"
      />
      <div
        className="Component-container-78"
      >
        <img
          className="Component-logoImage-80"
          src="/logo.png"
        />
        <div
          className="Component-caption-76"
        />
        <div
          className="Component-children-77"
        >
          <h5
            className="MuiTypography-root-32 MuiTypography-h5-48 MuiTypography-alignCenter-55 Component-pageTitle-75"
          >
            Create your account!
          </h5>
          <div
            renderButton={[Function]}
          >
            SignUp - 
            <button
              className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-raised-17 MuiButton-raisedPrimary-18 MuiButton-fullWidth-28"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              renderButton={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-4"
              >
                REGISTER
              </span>
              <span
                className="MuiTouchRipple-root-68"
              />
            </button>
            <h6
              className="MuiTypography-root-32 MuiTypography-h6-49 MuiTypography-alignCenter-55 Component-message-2"
            >
              You confirm you're 18
            </h6>
            <div
              className="Component-links-1"
            >
              <div
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
                to="/sign-in"
              >
                Link - 
                <span
                  className="MuiTypography-root-32 MuiTypography-caption-42 MuiTypography-colorPrimary-62"
                >
                  Already have an account?
                </span>
              </div>
            </div>
          </div>
        </div>
        <p
          className="MuiTypography-root-32 MuiTypography-body1-41 MuiTypography-alignCenter-55"
        />
      </div>
    </div>
  </div>
  <div>
    renderCreated - 
    <div
      noThrow={true}
      to="/"
    >
      Redirect - 
    </div>
  </div>
</div>
`;

exports[`renders the form correctly 1`] = `
Array [
  <button
    className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-raised-17 MuiButton-raisedPrimary-18 MuiButton-fullWidth-28"
    disabled={false}
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-4"
    >
      REGISTER
    </span>
    <span
      className="MuiTouchRipple-root-68"
    />
  </button>,
  <h6
    className="MuiTypography-root-32 MuiTypography-h6-49 MuiTypography-alignCenter-55 Component-message-2"
  >
    You confirm you're 18
  </h6>,
  <div
    className="Component-links-1"
  >
    <div
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/sign-in"
    >
      Link - 
      <span
        className="MuiTypography-root-32 MuiTypography-caption-42 MuiTypography-colorPrimary-62"
      >
        Already have an account?
      </span>
    </div>
  </div>,
]
`;
